--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-  margin-bottom: 3rem;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #096e34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.days-one {
   font-family: 'Days One', sans-serif;
 }
 
-.App-link {
-  color: #dceb5d;
-  font-size: 1rem;
-  letter-spacing: .8rem;
-  font-weight: bold;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 @media (min-width: 600px) {
-  .App-link {
-    font-size: 2rem;
-  }
+
 }
